--- a/style.css
+++ b/style.css
@@ -10,6 +10,20 @@ h1 {
   font-size: 4rem;
 }
 
+h4 {
+  margin-top: -3rem;
+  padding-bottom: 0.7rem;
+  margin-bottom: 2rem;
+  border-bottom: 2px solid #cccccc;
+}
+
+/* ICONS */
+
+.icon-h4 {
+  margin-right: 1rem;
+  font-size: 150%;
+}
+
 /* HEADER */
 
 .wrapper {
